# serverHealth

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
deploy/: serverhealth-nobuild.service  serverhealth.service
src/: health_collector.cpp  health_collector.h  main.cpp
web/: index.html
